@@ -1,12 +1,15 @@
+plugins {
+	id 'org.jetbrains.kotlin.jvm' version '1.3.30'
+}
+
 apply plugin: 'java-library'
 
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 
 group   = 'de.uplanet.lucy'
-version = '9.0.7'
+version = '9.2.0'
 
 repositories
 {
@@ -19,35 +22,37 @@ repositories
 
 	flatDir
 	{
-		dirs 'lib'
+		dirs 'D:/UP/intrexxTrunk/lib'
 	}
 }
 
 
 dependencies
 {
-	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-
-	implementation group: 'org.apache.olingo', name: 'odata-client-core', version: '4.4.0'
-
 	implementation name: 'odata4j-0.8.0'
-	
+	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+	implementation group: 'org.apache.olingo', name: 'odata-client-core', version: '4.4.0'
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
-	
 	implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.5'
-	
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
-	
-	implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
-  
-  api group: 'de.uplanet.lucy', name: 'ix-common',              version: version
-  api group: 'de.uplanet.lucy', name: 'ix-server',              version: version
-  api group: 'de.uplanet.lucy', name: 'ix-connector-office365', version: version
-    
+	implementation (group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.5.RELEASE') {
+		transitive = false
+	}
+
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+	implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.30"
+	implementation 'com.beust:klaxon:5.0.5'
+
+	api group: 'de.uplanet.lucy', name: 'ix-common',              version: version
+	api group: 'de.uplanet.lucy', name: 'ix-server',              version: version
+	api group: 'de.uplanet.lucy', name: 'ix-connector-office365', version: version
+	api group: 'de.uplanet.lucy', name: 'ix-auxiliaries',         version: version
+
 	testImplementation group: 'org.easymock',      name: 'easymock',             version: '3.5.1'
-  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api',    version: '5.0.2'
-  testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '4.12.2'
-  testRuntimeOnly    group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.2'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api',    version: '5.0.2'
+	testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '4.12.2'
+
+	testRuntimeOnly    group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.2'
 }
 
 
@@ -60,4 +65,34 @@ jar {
             'Implementation-Title':   project.name,
             'Implementation-Version': version)
     }
+}
+
+
+task startPortal (type: JavaExec) {
+	standardOutput = System.out
+    errorOutput = System.err
+
+	classpath = (sourceSets.main.runtimeClasspath +
+			   fileTree('D:/UP/intrexxTrunk/lib'))
+
+	//doFirst {println classpath.join(',');println gradle.INTREXX_LOG4J_CFG}
+
+	main = 'de.uplanet.lucy.server.portalserver.PortalService'
+
+	jvmArgs '-Dfile.encoding=UTF-8'
+	jvmArgs "-Djava.library.path=${gradle.INTREXX_JRE_LIB_PATH}"
+	jvmArgs "-Dlog4j.configurationFile=file://${gradle.INTREXX_LOG4J_CFG}"
+	jvmArgs '-Djava.security.auth.login.config=file:internal/cfg/LucyAuth.cfg'
+	jvmArgs '-Dcom.sun.management.jmxremote.port=9500'
+	jvmArgs '-Dcom.sun.management.jmxremote.authenticate=false'
+	jvmArgs '-Dcom.sun.management.jmxremote.ssl=false'
+	jvmArgs '-Xms512m'
+	jvmArgs '-Xmx1024m'
+	jvmArgs '-Djava.io.tmpdir=internal/tmp'
+	jvmArgs '-Djava.net.preferIPv4Stack=true'
+	jvmArgs '-Dde.uplanet.lucy.server.composer.ixservlet.debug.json=true'
+	jvmArgs '-Dde.uplanet.jdbc.trace=false'
+	jvmArgs '--illegal-access=permit'
+	environment ([INTREXX_HOME: gradle.INTREXX_HOME])
+	workingDir gradle.INTREXX_PORTAL_DIR
 }
